# OPRE

./: .gitignore  README.md  pyproject.toml
LB1_LP_SAMPLE/: UMP01.ipynb  UMP01_ILP_MATRIX_NOTATION.py  UMP01_LP_MATRIX_NOTATION.py  UMP07.ipynb  UMP07_LP_MATRIX_NOTATION.py  UMP11.ipynb  UMP11_LP_MATRIX_NOTATION.py  UMP12.ipynb  UMP12_ILP_ALGEBRAIC_NOTATION.py  UMP12_ILP_EXCEL_BASED.py  UMP12_PARAMS.xlsx  UMP16.ipynb  UMP16_ILP_ALGEBRAIC_NOTATION.py  UMP16_ILP_MATRIX_NOTATION.py  UMP18.ipynb  UMP18_ILP_ALGEBRAIC_NOTATION.py  UMP18_ILP_MATRIX_NOTATION.py  UMP23.ipynb  UMP23_ILP_ALGEBRAIC_NOTATION.py  readme.md
LB2_KO_PROJECT/: knapsack_problem_verb-heur  readme.md
LB2_KO_PROJECT/bin_packing_1d/: bin_packing_1d.ipynb  bin_packing_1d_reader.py
LB2_KO_PROJECT/bin_packing_2d/: bin_packing_2d.ipynb  (+1 more)
LB3_GT_SAMPLE/: GT_ADJ_LIST.py  GT_ADJ_MATRIX.py  GT_COMPLETE.py  GT_COMPLETE_CHECK.py  GT_CON_UNCON.py  GT_DIJKSTRA.py  GT_DIR_UNDIR.py  GT_FORD_FULKERSON.py  GT_MST.py  GT_NEAREST_NEIGHBOR.py  GT_NODE_COLORING.py  GT_NODE_DEGREE.py  GT_SCRIPTS.ipynb  readme.txt
_OPRE md convert/: local_search_swap.md
data/: BIN_PACK_1D_C25_O60.bpk  BIN_PACK_2D_C10X10_O28.bpk  BIN_PACK_2D_C10X10_O38.bpk  CAP_KS_3.ks  CAP_KS_48.ks  CAP_KS_5b.ks  CAP_KS_8.ks  FLP_D3_U3_test1.flp  FLP_D6_U3_test2.flp  FLP_D6_U4_test3.flp  FLP_D7_U800.flp  HC_BQ_01.hcq  HC_BQ_02.hcq  HC_BQ_03.hcq  HC_SP_01.hcp  PRODPLAN_M2_J21.ppl  PRODPLAN_M2_J53.ppl  PRODPLAN_M2_J5_test2.ppl  PRODPLAN_M2_J8.ppl  PRODPLAN_M4_J32.ppl  SUBSETSUM_C20_I10.sbs  SUBSETSUM_C20_I6.sbs  test4.tsp  test6.tsp  test8.tsp
(+36 files in other folders)
