[project]
name = "opre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "ortools>=9.14.6206",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "scipy>=1.16.1",
]
